# curves

./: README.md
curves/: CMakeLists.txt  package.xml
curves/doc/doxygen/: doxygen.config.in
curves/test/: CubicHermiteSE3CurveTest.cpp
curves_ros/: CMakeLists.txt  package.xml
curves_ros/test/: TestCurvesRos.cpp  ros_interface.test
